fixed form spacing

--- a/src/App.css
+++ b/src/App.css
@@ -203,11 +203,11 @@ button:disabled {
 }
 
 .site-container {
-
   height:85vh;
   width: 100%;
   max-width: 150rem;
   justify-self: center;
+  display: grid;
 
 }
 
@@ -557,13 +557,14 @@ top: 5rem;
 
 
 .login-form {
+  height: 85vh;
+
   display:grid;
   flex-direction: column;
   grid-template-columns: 1fr ;
- 
-
   height:30vh;
   width: 30vw;
+  align-self: center;
 }
 
 .login-button {
@@ -598,6 +599,8 @@ top: 5rem;
   margin: 0;
   display: grid;
   justify-items: center;
+  height: 40vh;
+  align-self: center;
 }
 
 .add-clip-form {
